# b0c79e61-6df1-4ad5-bfa7-ce6ee82e8f90

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  openapi.json
.github/workflows/: audit.yaml  ci.yaml
.sqlx/: query-190b37c1f5862ee8318be8d7471846a1071c781460fe4c5ecf18041dfc259378.json  query-21300fa77d0a0dd60ce4225de7859d450e256f4e31810205c1e8da8057ec8475.json  query-282070abc8eefff6645646f030f654406aea08bc7269d97654dc5a0920baa274.json  query-29e3d8ec8e46c34dce14544af91bed2242666a41a7a1d7d8f2110ff79f35b74f.json  query-2a211ec2508b3b7b3fb50aa15a9d1ba515c3f57774d919f6f566ef6d06842c83.json  query-2ad4d3268daa703a12a568a2c35e71fedcc504044b4c90cae3c82eb0c8bd319b.json  query-35aab1892623ab11ed3e8744270b32668fa14466d973f0bb4fda745794218a38.json  query-48a09b6f1e6bf98f5d881521b3397c0c1d1d839f9109e89db713fae64576be49.json  query-48bc3a7417e32a9eb17d19dd8b0237df5c365a8b83f1222f46c0fb1479e87d4b.json  query-49277ec94ff4581028ea9be8ad97c69380b56a4b3954f3b5a9e6fd8a2cd98475.json  query-618447e819033ea14b382d68f10faa196ad26dcab5df856bc8b9534488eedc9b.json  query-65687f35a0512d8f4af1d85176fec81212d3ef0059e5c7ed8ef25d03e8743ecd.json  query-6739a1d08c5c5784722b1391165bc974bcf36517228f347093213d0eb83ccfa4.json  query-709f3dd58e2ad37e5dfb520224890f6a12c68d0a852e1f5bfa8c83772a0fbb50.json  query-737f56dbf2c75ba7b91634df59e335191dd4b5d8729419fe12ae61bfd79eaefd.json  query-75d50585c88b5e6faf5e6086ffed3166d134060a920c1be53dc5c06cdcaf3de3.json  query-8a26b603d4c518ffb88f419ac266f1d64e57606c298c07bd32324b981d96cb91.json  query-8aae4261f08751dd92c271f12c7a5728b56eb71feec9d93121b0ca59cd7f2e66.json  query-8b4a1e00217df5e6025eb20e2b30275ea4691265ffebb394450cabe65dfa7cf9.json  query-8da213a71b03bede84cb1730314f545459e9243139158b8367c520efae0ebfc5.json  query-904e930d93bb0fbc396510e218c197c48b23a7122553213166a81b812a9dc4be.json  query-9245695af95c1664a0b5337b516467257d86ce0b4c5587e89f9526822a59104d.json  query-9928bff3a4bc1ecf6ec474a25c169e016212434c6045e96c0af102f50911d816.json  query-ac9a250640ed2a7dc08a66d85e9a106d240515acfd832a4d5ff7e82058875958.json  query-af3d5b01e87fc4c03d7f94611cbadd00c22b92653bfdd7712eed76dc65173091.json  query-b3fd0e32968383f2139fa7421464acd16b05f42cfe0861fd92e2e9ec627bb587.json  query-d08f4d6c96ee71ea115fce9a84b335db79b168ab9d9b1c27bff8e436cd189c9f.json  query-e070a808050d103e1f26181fed827abedc9907a4ed98917d6d5ac85c5270a07e.json  query-e20e2ce92687766ee4a0249bbf64948b084bdedb021f6fd8eb25f32808dd3bde.json  query-e3ef8ec7ee9c652e7ddbf127d567cdf11613121473b13bb135335a91ec038915.json  query-ea6de1404a6ee564c9b0ffd262bd857671ba970d6ce809d8269a142269121db3.json  query-ec8a37fa331fe6cf3fa3e6745735c6ab63504b1e55a0f2802f5e1e2558808328.json  query-fb44b484f289d1c1cbde060328abe50106169443269f7d5a860507d75501fafc.json  query-fc5e1d3be7d2478e7237496ca70db1d551dfc0c2bda76f287667ea413b7777aa.json  query-fcd577a72010f3f07fca46680bb0047106bee28988c7aea012834bc83d83a1e1.json
configs/: base.toml  dev.toml  local.toml  production.toml  staging.toml
migrations/: 20250520002541_create_table_jobs.sql  20250520002541_create_table_scrapper_jobs.sql  20250520142027_create_packages_table.sql
observability/: alertmanager.yaml  docker-compose.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml  tempo.yaml
scripts/: init_db.sh
src/: api.rs  app.rs  config.rs  error.rs  lib.rs  main.rs  minio.rs  rabbitmq.rs  telemetry.rs  types.rs  worker.rs
src/api/: middlewares.rs  mod.rs  types.rs
src/api/middlewares/: mod.rs  record_metrics.rs  tracing.rs
src/api/routes/: health.rs  jobs.rs  metrics.rs  mod.rs  openapi.rs  packages.rs
src/db/: jobs.rs  mod.rs  packages.rs  scrapper_jobs.rs  types.rs
src/models/: job.rs  mod.rs  package.rs  scrapper_job.rs
src/services/: minio.rs  mod.rs  rabbitmq.rs
src/telemetry/: metrics.rs  mod.rs  tracing.rs
tests/api/: health_check.rs  helpers.rs  jobs.rs  main.rs  metrics.rs  not_found.rs  openapi.rs  scrapper_jobs.rs
tests/api/routes/: health.rs  jobs.rs  mod.rs  openapi.rs
tests/app/: helpers.rs
tests/app/api/routes/: jobs.rs  mod.rs  openapi.rs  packages.rs
