[package]
name = "integrations_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.7", features = ["tracing"] }
axum-tracing-opentelemetry = "0.28.0"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
futures-lite = "2.6.0"
lapin = "2.5.3"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry-stdout = "0.29.0"
opentelemetry_sdk = "0.29.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
  "fmt",
] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
]
